# VIT-PyTorch-Implementation

./: .gitignore  README.md  main.py  pyproject.toml
configs/: VIT_BASE.yaml  vit_custom.yaml
data/: __init__.py  custom_dataset.py
models/: Encoder.py  FFN.py  MHAttention.py  VIT.py  __init__.py
notebooks/: train_model.ipynb
utils/: __init__.py  metrics.py  trainer.py
