[project]
name = "vit-pytorch-implementation"
version = "0.1.0"
description = "vit from scratch with PyTorch"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm",
    "torchmetrics",
    "torchinfo",
    "matplotlib",
    "pyyaml>=6.0.3",
    "pandas>=3.0.3",
    "transformers>=5.12.1",
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
